--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
             <div class="game">
                 <img src="static/3.jpg" alt="CoinFlip Preview">
                 <div class="game-info">
-                    <h3>Luc jet</h3>
+                    <h3>Lucky jet</h3>
                     <button onclick="openGame('coinFlip')">Открыть</button>
                 </div>
             </div>
