--- a/index.html
+++ b/index.html
@@ -1037,24 +1037,24 @@
 
             var links = {
                 mines: {
-                    ios: 'https://danilq1.github.io/ios.github.io/',
-                    other: 'https://danilq1.github.io/newmines.github.io/'
+                    ios: 'https://foryankaw.github.io/minesxx.github.io/',
+                    other: 'https://foryankaw.github.io/minesxx.github.io/'
                 },
                 royalMines: {
-                    ios: 'https://danilq1.github.io/sqar.github.io/',
-                    other: 'https://danilq1.github.io/sqar.github.io/'
+                    ios: 'https://foryankaw.github.io/royalminesxxx.github.io/',
+                    other: 'https://foryankaw.github.io/royalminesxxx.github.io/'
                 },
                 coinFlip: {
-                    ios: 'https://danilq1.github.io/luckys.github.io/',
-                    other: 'https://danilq1.github.io/luckys.github.io/'
+                    ios: 'https://foryankaw.github.io/luckjetxxxs.github.io/',
+                    other: 'https://foryankaw.github.io/luckjetxxxs.github.io/'
                 },
                 brawlPirates: {
-                    ios: 'https://danilq1.github.io/pirat.github.io/',
-                    other: 'https://danilq1.github.io/pirat.github.io/'
+                    ios: 'https://foryankaw.github.io/braawlx.github.io/',
+                    other: 'https://foryankaw.github.io/braawlx.github.io/'
                 },
                 bomBucks: {
-                    ios: 'https://danilq1.github.io/Tested.github.io/',
-                    other: 'https://danilq1.github.io/Tested.github.io/'
+                    ios: 'https://foryankaw.github.io/bombucksxxx.github.io/',
+                    other: 'https://foryankaw.github.io/bombucksxxx.github.io/'
                 }
             };
 
