--- a/index.html
+++ b/index.html
@@ -591,14 +591,14 @@
 </head>
 <body>
     <header style="position: absolute; height: 50px; background-color: #02c473; width: 100%; display: flex; align-items: center; justify-content: center; text-align: center;">
-        <span style="color: white;">GOX</span>
+        <span style="color: white;">GOXS</span>
     </header>
 </body>
 
     <div id="About" class="tabcontent">
         <img id="aboutGif" src="static/1.gif" alt="Описание GIF" class="about-gif">
         <div class="about-text">
-            <h2>GOX</h2>
+            <h2>GOXS</h2>
             <span class="typing-text"></span>
         </div>
     </div>
